<resources>
    <string name="app_name">NoteIf-I</string>
    <string name="title_activity_maps">NoteIf-I</string>
    <string name="action_settings">Settings</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_plan_trip">Plan A Trip</string>
    <string name="contact_type_hint">Start typing contact name</string>
    <string name="contact_recipients_hint">Recipients added</string>
    <string name="enter_number">Please select a notification recipient</string>
    <string name="enter_radius">Please enter the radius of the geofence in meters</string>
     <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>
    <string name="geofence_transition_notification_text">Click notification to return to app</string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_dwell">Remained</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="not_connected">Client Not Connected</string>
    <string name="geofences_added">Geofence Added</string>
    <string name="geofences_removed">Geofence Removed</string>
    <string name="places">PLACES</string>
    <string name="button_clear">CLEAR RECIPIENTS</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_plan_trip">PlanTripActivity</string>

    <!-- content plan trip strings -->
    <string name="content_plan_trip_text_view_travel_from">Travelling From...</string>
    <string name="content_plan_trip_text_view_origin">Origin</string>
    <string name="content_plan_trip_text_view_destination">Destination</string>
    <string name="content_plan_trip_text_view_mode">Mode Of Transport</string>
    <string name="content_plan_trip_text_view_departure_time">Departure Time</string>
    <string name="content_plan_trip_edit_text_departure_time_hint">Select Departure Time</string>
    <string name="content_plan_trip_button_find_routes">Find Route</string>
    <string-array name="mode_array">
        <item>driving</item>
        <item>walking</item>
        <item>bicycling</item>
        <item>transit</item>
    </string-array>
    <string name="title_activity_maps2">Map</string>
    <string name="add_geofences">ADD</string>
    <string name="remove_geofence">REMOVE</string>

    <!-- route detail fragment strings -->
    <string name="route_detail_text_view_header">ROUTE DETAIL</string>
    <string name="route_detail_text_view_summary">Summary</string>
    <string name="route_detail_text_view_warnings">Warnings</string>
    <string name="route_detail_text_view_duration">Duration</string>
    <string name="route_detail_text_view_duration_in_traffic">Duration in traffic</string>
    <string name="route_detail_button_text">GOT IT</string>

    <!--bottom sheet strings -->
    <string name="bottom_sheet_hdr"><u>Route Information</u></string>
    <string name="bottom_sheet_summary">Summary:</string>
    <string name="bottom_sheet_warnings">Warnings:</string>
    <string name="bottom_sheet_duration">Duration:</string>
    <string name="bottom_sheet_duration_traffic">Duration in trraffic:</string>
    <string name="bottom_sheet_button">Select Route</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
