<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/content_plan_trip"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mobile.swollestandroid.noteifi.activity.PlanTripActivity"
    tools:showIn="@layout/activity_plan_trip">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/sub_layout_bg"
        android:weightSum="1"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_plan_trip_text_view_travel_from"
            android:id="@+id/tvTravellingFrom"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_plan_trip_text_view_origin"
                android:id="@+id/tvOrigin"
                android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_plan_trip_text_view_destination"
            android:id="@+id/tvDestination"
            android:layout_gravity="right"
            android:layout_weight="0.04" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinOrigin"
            android:layout_weight="0.5"/>

        <View
            android:id="@+id/blank"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinDestination"
            android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_plan_trip_text_view_mode"
                android:id="@+id/tvTransportMode"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinMode"
            android:layout_weight="0.4"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_plan_trip_text_view_departure_time"
                android:id="@+id/tvDepartureTime"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etDepartureTime"
                android:hint="@string/content_plan_trip_edit_text_departure_time_hint"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_plan_trip_button_find_routes"
                android:id="@+id/btnGetRoutes"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:progressDrawable="@drawable/circular_progressbar"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
