<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="?attr/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mobile.swollestandroid.noteifi.activity.NotificationActivity"
    tools:showIn="@layout/activity_notification">


    <ListView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:id="@+id/contactsListView"
        android:choiceMode="multipleChoice"
        android:background="@drawable/listview"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="47dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/etName"
        android:background="@drawable/edit_button_bg"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:maxLength="45"
        android:singleLine="true"
        android:hint="@string/contact_type_hint"
        android:layout_below="@+id/tvNumber" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/etRecipients"
        android:background="@drawable/edit_button_bg"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/contact_recipients_hint"
        android:inputType="none"
        android:layout_below="@+id/contactsListView"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/recipients_text_size"
        android:layout_marginTop="59dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_clear"
        android:id="@+id/btnClearRecipients"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
